<resources>
    <string name="app_name">Insta_salon</string>
    <string name="password">Пароль</string>
    <string name="number">Номер телефона</string>
    <string name="passwordcheck">Подтверждение пароля</string>
    <string name="name">Имя пользователя</string>
    <string name="sing_in">зарегистрироваться</string>
    <string name="email">Почта</string>
    <string name="log_in">Войти</string>
    <string name="profile">Профиль</string>
    <string name="meet">Запись</string>
    <string name="my_meet">Мои записи</string>
    <string name="edit">редактировать</string>
    <string name="name_of">Имя</string>
    <string name="firstname">Фамилия</string>
    <string name="save">сохранить</string>
    <string name="data">20.12.2021г</string>
    <string name="active">Активные</string>
    <string name="master">Мастер:</string>
    <string name="time">Время:</string>
    <string name="adress">Адрес:</string>
    <string name="name_master">Алия</string>
    <string name="time_master">16:40</string>
    <string name="adress_master">Восток-5</string>
    <string name="history_of_eet">История записей</string>
    <string name="choose">Выберите филиал</string>
    <string name="work_day">рабочий день, есть окошки</string>
    <string name="no_places">нет свободных мест</string>
    <string name="time_15">15:40</string>
    <string name="choose_maste">Выбор мастера</string>
    <string name="meet_soon">Ближайшая запись</string>
    <string name="pedicure">Педикюр</string>
    <string name="manicure">Маникюр</string>
    <string name="usluga2">Снятие наращеных ногтей</string>
    <string name="price">Стоимость</string>
    <string name="_330c">330c</string>
    <string name="usluga1">Маникюр+гель лак+дизайн</string>
    <string name="_550">550с</string>
    <string name="usluga3">Гигиенический маникюр</string>
    <string name="_300c">300c</string>
    <string name="usluga4">Маникюр+наращивание ногтей поли гелем+дизайн</string>
    <string name="_1100c">1100c</string>
    <string name="usluga5">Реставрация нарощеный ногтей</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="december">декабрь</string>
    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wendsday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="suturday">сб</string>
    <string name="sunday">вс</string>
    <string name="master_name">Айнура</string>
    <string name="vostok_5">Восток-5</string>
    <string name="adress2">Боконбаева/Исанова</string>
    <string name="adress3">7-мкр</string>
    <string name="adress4">Совестская/Боконбаева</string>
    <string name="adress5">пр. Чуй 186</string>
    <string name="adress6">Ахунбаева 141</string>
    <string name="adress7">Аламедин-1</string>
    <string name="_07_12_2021">07,12,2021</string>
    <string name="_15_10_2021">15.10.2021г</string>
    <string name="marina_master">Марина</string>
    <string name="_10_40">10:40</string>
    <string name="uslugi">Услуги</string>
    <string name="time_">Время</string>
    <string name="master_">Мастер</string>

</resources>