<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountEdit"
    android:background="@color/lavanda">

    <LinearLayout
        android:id="@+id/main_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/save"
                android:layout_width="145dp"
                android:layout_height="40dp"
                android:background="@drawable/shape"
                android:text="@string/save"
                android:textStyle="bold"
                android:layout_marginStart="120dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/white"
                app:civ_border_width="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_photo">
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_of"
                android:textColor="@color/main_blue"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/name_info"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:background="@drawable/shape_white"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/main_blue"
                android:text="@string/firstname"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/firstname_info"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:background="@drawable/shape_white"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/main_blue"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/email_info"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:background="@drawable/shape_white"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textColor="@color/main_blue"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/numer_info"
                android:layout_width="360dp"
                android:layout_height="60dp"
                android:textColor="@color/white"
                android:background="@drawable/shape_white"
                android:textStyle="bold"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/menu">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>